<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_activity_image"
            android:src="@drawable/cordoba"
            android:scaleType="centerInside"
            android:id="@+id/imvHome"
            />

        <Button
            android:layout_marginTop="@dimen/wiget_margin_top"
            android:id="@+id/btnNewPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_add"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/add_new_point"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/imvHome"
            android:textSize="12dp"
            />

        <Button
            android:id="@+id/btnList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_list"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/text_list"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/btnNewPoint"
            android:textSize="12dp"
            />

        <Button
            android:id="@+id/btnStadist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_stadist"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/text_stadist"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/btnList"
            android:textSize="12dp"
            />

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_about"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/text_about"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/btnStadist"
            android:textSize="12dp"
            />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_exit"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/text_exit"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/btnAbout"
            android:textSize="12dp"
            />


    </RelativeLayout>

</ScrollView>