<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amador.tour.LoginActivity">


    <ImageView
        android:layout_width="@dimen/imv_login"
        android:layout_height="@dimen/imv_login"
        android:src="@drawable/icon_tour"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/imv_login_margin_top"
        android:id="@+id/imvLogin"
        />


    <android.support.design.widget.TextInputLayout
        app:errorTextAppearance="@color/colorRed"
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_below="@+id/imvLogin"
        android:layout_marginTop="@dimen/wiget_margin_top"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text_name"
            android:textSize="12dp"
            android:textColor="@color/colorBlack"
            android:id="@+id/edtName"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@color/colorRed"
        android:layout_below="@+id/tilName"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text_email"
            android:textSize="12dp"
            android:textColor="@color/colorBlack"
            android:id="@+id/edtMail"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/text_ok"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
